sg/main.tf
provider "aws" {
  region = "eu-central-1"
}

resource "aws_instance" "ec2" {
    ami = "ami-076309742d466ad69"
    instance_type = "t2.micro"
    security_groups = [aws_security_group.webtarffic.name]
}

resource "aws_security_group" "webtarffic" {
  name = "allow https"

  ingress {
    from_port = 443 
    to_port = 443
    protocol = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 443 
    to_port = 443
    protocol = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
